@@ -18,6 +18,8 @@
   * init - add the possiblity to ignore further interrupts from keyboard
   * init - add the possiblity to set sane terminal line settings
   * sulogin - add the possibility to reset the terminal io
+  * Fix some minor problems
+  * init - enable is_selinux_enabled() to detect selinuxfs
 
 sysvinit (2.88dsf) UNRELEASED; urgency=low
 
